# MotionControl

./: .gitignore  LICENSE  README.md
Control_design/: DC_Motor_PID_Control.slx  DC_Motor_PID_Control.slxc  Run_DC_Motor_PID_Control.m  dc_motor_cascaded_control.m
control_implementation/: CMakeLists.txt  PID.cpp  PID.h  PID_test  PID_test.cpp  motor_control_stm_32.cpp  mypgram  mytest  pidControllogic.cpp  test
